Fixed a reference to messages.js
git-svn-id: https://cixar.com/svns/tale@967 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/tale/@.html
+++ b/tale/@.html
@@ -27,6 +27,6 @@
                 <td width="100%"><input type="textbox" id="command"/></td>
             </tr>
         </table>
-        <script src="messages.js"></script>
+        <script src="software/messages.js"></script>
     </body>
 </html>
