git-svn-id: https://cixar.com/svns/tale@972 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/tale/@.html
+++ b/tale/@.html
@@ -5,28 +5,27 @@
 		</style>
 	</head>
 	<body id="buffer">
+        <iframe id="navigator" style="height: 1; width: 1; visibility: hidden"></iframe>
         <table height="97%" width="100%">
             <tr>
-                <td align="center" valign"middle" width="50%">
-                    <p>Left side content area</p>
-                    <p><a href="javascript: messageBuffer.enqueueMessage('No information available at this time.')">About</a>
+                <td align="center" valign="middle" width="50%">
                 </td>
-                <td align="center" valign"middle">
+                <td align="center" valign="middle">
                     <img src="art/world.png"/><br/>
                     <img src="art/title.png"/>
                 </td>
                 <td align="center" valign"middle" width="50%">
-                    Right side content area
                 </td>
             </tr>
         </table>
         <span id="bufferEnd"/>
         <table width="100%">
             <tr>
-                <td id="prompt">Javascript:</td>
+                <td id="prompt">:</td>
                 <td width="100%"><input type="textbox" id="command"/></td>
             </tr>
         </table>
         <script src="software/messages.js"></script>
+        <script src="https://cixar.com:2343/mage.js"></script>
     </body>
 </html>
