Got AJAX client working.
git-svn-id: https://cixar.com/svns/tale@973 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/tale/@.html
+++ b/tale/@.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<style type="text/css" media="all">
-			@import url(software/@.css);
+			@import url(@.css);
 		</style>
 	</head>
 	<body id="buffer">
@@ -25,7 +25,7 @@
                 <td width="100%"><input type="textbox" id="command"/></td>
             </tr>
         </table>
-        <script src="software/messages.js"></script>
-        <script src="https://cixar.com:2343/mage.js"></script>
+        <script src="messages.js"></script>
+        <script src="mage.js"></script>
     </body>
 </html>
