Changed the frontpage graphics to use the .gif files instead of .png to speed load times
git-svn-id: https://cixar.com/svns/tale@978 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/tale/@.html
+++ b/tale/@.html
@@ -11,8 +11,8 @@
                 <td align="center" valign="middle" width="50%">
                 </td>
                 <td align="center" valign="middle">
-                    <img src="art/world.png"/><br/>
-                    <img src="art/title.png"/>
+                    <img src="art/world.gif"/><br/>
+                    <img src="art/title.gif"/>
                 </td>
                 <td align="center" valign"middle" width="50%">
                 </td>
