Fixed valign attributes...by removing them.
git-svn-id: https://cixar.com/svns/tale@981 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/tale/@.html
+++ b/tale/@.html
@@ -8,13 +8,13 @@
         <iframe id="navigator" style="height: 1; width: 1; visibility: hidden"></iframe>
         <table height="97%" width="100%">
             <tr>
-                <td align="center" valign="middle" width="50%">
+                <td align="center" width="50%">
                 </td>
-                <td align="center" valign="middle">
+                <td align="center">
                     <img src="art/world.gif"/><br/>
                     <img src="art/title.gif"/>
                 </td>
-                <td align="center" valign"middle" width="50%">
+                <td align="center" width="50%">
                 </td>
             </tr>
         </table>
