git-svn-id: https://cixar.com/svns/tale@1010 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/tale/client/@.html
+++ b/tale/client/@.html
@@ -11,8 +11,8 @@
                 <td align="center" width="50%">
                 </td>
                 <td align="center">
-                    <img src="art/world.gif"/><br/>
-                    <img src="art/title.gif"/>
+                    <img src="../art/world.gif"/><br/>
+                    <img src="../art/title.gif"/>
                 </td>
                 <td align="center" width="50%">
                 </td>
@@ -25,7 +25,7 @@
                 <td width="100%"><input type="textbox" id="command"/></td>
             </tr>
         </table>
-        <script src="software/messages.js"></script>
-        <script src="software/mage.js"></script>
+        <script src="messages.js"></script>
+        <script src="mage.js"></script>
     </body>
 </html>
