Fixed prompt display, command 'silence', and attempted to force focusing on the command box when it changes 'silence'
git-svn-id: https://cixar.com/svns/tale@1033 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/@.html
+++ b/@.html
@@ -21,7 +21,7 @@
         <span id="bufferEnd"/>
         <table width="100%">
             <tr>
-                <td id="prompt">:</td>
+                <td><nobr id="prompt">:</nobr></td>
                 <td width="100%"><input type="textbox" id="command"/></td>
             </tr>
         </table>
