--- a/client/@.html
+++ b/client/@.html
@@ -21,7 +21,7 @@
         <span id="bufferEnd"/>
         <table width="100%">
             <tr>
-                <td id="prompt">:</td>
+                <td><nobr id="prompt">:</nobr></td>
                 <td width="100%"><input type="textbox" id="command"/></td>
             </tr>
         </table>
