Added support for overlays and the persistent world map
git-svn-id: https://cixar.com/svns/tale@1037 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/@.html
+++ b/@.html
@@ -6,7 +6,7 @@
 		</style>
 	</head>
 	<body id="buffer">
-        <table height="95%" width="100%">
+        <table height="98%" width="100%">
             <tr>
                 <td align="center" width="50%">
                 </td>
@@ -25,7 +25,12 @@
                 <td width="100%"><input type="textbox" id="command"/></td>
             </tr>
         </table>
+        <div id="widgets">
+            <div id="map"></div>
+        </div>
+        <script src="client/domSupplement.js"></script>
         <script src="client/messages.js"></script>
+        <script src="client/overlays.js"></script>
         <script src="client/mage.js"></script>
     </body>
 </html>
