Added a monkey and struk a proof of concept for the hand cursor with css
git-svn-id: https://cixar.com/svns/tale@1049 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/art/monkey.html
+++ b/art/monkey.html
@@ -40,8 +40,8 @@
         </style>
     </head>
     <body>
-        <p style="text-align: center"><img src="monster/puppy.png" style="height: 10em"/></p>
-        <p style="text-align: center">You encounter a dire puppy.</p>
+        <p style="text-align: center"><img src="monster/monkey.png" style="height: 10em"/></p>
+        <p style="text-align: center">You encounter an insane mutant monkey.</p>
         <div class="choices" style="text-align: center">
             <a href=""><img src="cursor.png"/>Talk</a></li>
             <a href=""><img src="cursor.png"/>Fight</a></li>
