--- a/art/kitten.html
+++ b/art/kitten.html
@@ -1,23 +1,51 @@
 <html>
     <head>
         <style>
-            body, td, th {
+
+            window, body, td, th {
                 text-align: center;
                 font-size: 30px;
-                font-family: sans-serif;
+                font-family: monospace, Phetsarath OT, URW Gothic L, Mallige, Pothana2000, Saab, Sans, sans-serif;
                 text-align: left;
+                background-color: #46B3D3;
             }
+
+            body {
+                margin: 1em auto;
+                width: 600px;
+            }
+
+            .choices {
+                text-align: left;
+                margin: auto auto;
+            }
+            .choices a {
+                text-decoration: none;
+                white-space: nowrap;
+            }
+            .choices a img { 
+                height: 1em;
+                border: none;
+                padding-right: .3ex;
+                vertical-align: bottom;
+                font-weight: bold;
+                opacity: .25;
+                filter: alpha(opacity = 25);
+            }
+            .choices a:hover img {
+                opacity: 1;
+                filter: alpha(opacity = 100);
+            }
+
         </style>
     </head>
     <body>
-        <center>
-            <p><img src="monster/kitten.png" style="height: 10em;"/></p>
-            <p>You encounter a feral kitten.</p>
-            <table>
-                <tr><td></td><td>Talk<td></tr>
-                <tr><td></td><td>Fight<td></tr>
-                <tr><td><img src="cursor.png" style="height: 1em; base-line: bottom"></td><td>Flee<td></tr>
-            </table>
-        </center>
+        <p style="text-align: center"><img src="monster/kitten.png" style="height: 10em"/></p>
+        <p style="text-align: center">You encounter a feral kitten.</p>
+        <div class="choices" style="text-align: center">
+            <a href=""><img src="cursor.png"/>Talk</a></li>
+            <a href=""><img src="cursor.png"/>Fight</a></li>
+            <a href=""><img src="cursor.png"/>Flee</a></li>
+        </div>
     </body>
 </html>
