--- a/art/shrub.html
+++ b/art/shrub.html
@@ -41,12 +41,22 @@
         </style>
     </head>
     <body>
-        <p style="text-align: center"><img src="monster/monkey.png" style="height: 10em"/></p>
-        <p style="text-align: center">You encounter an insane mutant monkey.</p>
+        <p style="text-align: center"><img src="monster/shrub.png" style="height: 10em"/></p>
+        <p style="text-align: center">You encounter a shrub.</p>
         <div class="choices" style="text-align: center">
             <a href=""><img src="cursor.png"/>Talk</a></li>
             <a href=""><img src="cursor.png"/>Fight</a></li>
             <a href=""><img src="cursor.png"/>Flee</a></li>
         </div>
+        <div style="text-align: center; opacity: .50; font-size: .7em; margin-top: 4em">
+            <p>
+                It doesn't talk much.
+                If you fight it, it won't resist.
+                If you kill it, it will not drop coins, bombs, or axes.
+                It will, however, be dead.
+                You may find this subtly ironic.
+            </p>
+            <p><i>"Firstly.  You must get us another shrubbery!" - The knights who once said "Ni!"</i></p>
+        </p>
     </body>
 </html>
