--- a/art/magus-borealis.html
+++ b/art/magus-borealis.html
@@ -41,8 +41,8 @@
         </style>
     </head>
     <body>
-        <p style="text-align: center"><img src="monster/shrub.png" style="height: 10em"/></p>
-        <p style="text-align: center">You encounter a shrub.</p>
+        <p style="text-align: center"><img src="monster/magus-borealis.png" style="height: 10em"/></p>
+        <p style="text-align: center">You encounter <i>Magus Borealis</i>.</p>
         <div class="choices" style="text-align: center">
             <a href=""><img src="cursor.png"/>Talk</a></li>
             <a href=""><img src="cursor.png"/>Fight</a></li>
@@ -50,13 +50,11 @@
         </div>
         <div style="text-align: center; opacity: .50; font-size: .7em; margin-top: 4em">
             <p>
-                It doesn't talk much.
-                If you fight it, it won't resist.
-                If you kill it, it will not drop coins, bombs, or axes.
-                It will, however, be dead.
-                You may find this subtly ironic.
+                <i>Magus Borealis</i>, the Red Mage of the North,
+                leads the fascist elves, reindeer, and polar bears from the
+                upper bergs in a ceasless war against the imperialist penguins of the nether Arctic.
+                <i>Magus</i> hates children and is seldom seen without his rum.
             </p>
-            <p><i>"Firstly.  You must get us another shrubbery!" - The Knights Who All So Recently Said "Ni!"</i></p>
         </p>
     </body>
 </html>
