--- a/art/lag.html
+++ b/art/lag.html
@@ -42,7 +42,7 @@
     </head>
     <body>
         <p style="text-align: center"><img src="monster/lag.png" style="height: 10em"/></p>
-        <p style="text-align: center">You encounter the lag demon.</p>
+        <p style="text-align: center">You encounter the lag monster.</p>
         <div class="choices" style="text-align: center">
             <a href=""><img src="cursor.png"/>Talk</a></li>
             <a href=""><img src="cursor.png"/>Fight</a></li>
@@ -50,7 +50,7 @@
         </div>
         <div style="text-align: center; opacity: .50; font-size: .7em; margin-top: 4em">
             <p>
-                Only time can defeat the lag demon.
+                Only time can defeat the lag monster.
             </p>
             <p><i>"Connection reset by peer.  Patience lost."</i></p>
         </p>
