--- a/client/console.html
+++ b/client/console.html
@@ -6,7 +6,7 @@
     <body>
         <div id="content">
             <p style="text-align: center">
-                <img height="493" width="428" src="art/world.png"/>
+                <img height="75%" src="art/world.png"/>
             </p>
             <div id="buffer">
             </div>
