Added sound, rotation, and vertical centering.
git-svn-id: https://cixar.com/svns/tale@1175 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/client/index.html
+++ b/client/index.html
@@ -5,19 +5,34 @@
     </head>
     <body>
         <div id="body">
-            <div id="center" class="content">
+            <div id="horizon">
+                <div id="deadcentre">
+                    <div class="content">
 
-                <p class="encounter">
-                    <img src="art/world-300.png" alt="The world of Tale is a cube.">
-                </p>
+                        <p class="encounter">
+                            <img id="tale" src="art/world-300.png" alt="The world of Tale is a cube.">
+                        </p>
 
-                <h1>Tale</h1>
+                        <h1>Tale</h1>
 
-                <p class="encounter">You encounter Tale.</p>
-                <div id="buffer"></div>
-                <p class="menuBar">
-                    <a id="playButton" class="choice" href="noscript.html">Play</a>
-                </p>
+                        <p class="encounter">You encounter Tale.</p>
+
+                        <div id="buffer"></div>
+
+                        <p class="menuBar">
+                            <a id="playButton" class="choice" href="noscript.html">Play</a>
+                            <a class="choice" href="https://cixar.com/tale/wiki/">Flee</a>
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+            <div>
+        </div>
+        <div id="hud">
+            <div id="left">
+            </div>
+            <div id="right">
             </div>
         </div>
     </body>
