--- a/client/play.html
+++ b/client/play.html
@@ -5,19 +5,32 @@
     </head>
     <body>
         <div id="body">
-            <div id="center" class="content">
+            <div id="horizon">
+                <div id="deadcentre">
+                    <div class="content">
 
-                <p class="encounter">
-                    <img src="art/world-300.png" alt="The world of Tale is a cube.">
-                </p>
+                        <p class="encounter">
+                            <img src="art/world-300.png" alt="The world of Tale is a cube.">
+                        </p>
 
-                <h1>Tale</h1>
+                        <h1>Tale</h1>
 
-                <p class="encounter">You encounter Tale.</p>
-                <div id="buffer"></div>
-                <p class="menuBar">
-                    <a id="playButton" class="choice" href="noscript.html">Play</a>
-                </p>
+                        <p class="encounter">You encounter Tale.</p>
+
+                        <div id="buffer"></div>
+
+                    </div>
+                </div>
+            </div>
+            <div>
+        </div>
+        <div id="hud">
+            <div id="left">
+                <div id="ad"></div>
+                <div id="widgetBar"></div>
+            </div>
+            <div id="right">
+                <div id="map"></div>
             </div>
         </div>
     </body>
