Added a taxonomy to Tale.  Worked on client.
git-svn-id: https://cixar.com/svns/tale@1176 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 
                         <h1>Tale</h1>
 
-                        <p class="encounter">You encounter Tale.</p>
+                        <p class="encounter">You encounter Tale<sup><abbr title="alpha">&alpha;</abbr></sup>.</p>
 
                         <div id="buffer"></div>
 
@@ -29,10 +29,15 @@
             </div>
             <div>
         </div>
-        <div id="hud">
-            <div id="left">
-            </div>
-            <div id="right">
+        <div id="hudHorizon">
+            <div id="hud">
+                <div id="left">
+                    <div id="ad"></div>
+                    <div id="widgetBar"></div>
+                </div>
+                <div id="right">
+                    <div id="map"></div>
+                </div>
             </div>
         </div>
     </body>
