--- a/client/play.html
+++ b/client/play.html
@@ -10,7 +10,7 @@
                     <div class="content">
 
                         <p class="encounter">
-                            <img src="art/world-300.png" alt="The world of Tale is a cube.">
+                            <img id="tale" src="art/world-300.png" alt="The world of Tale is a cube.">
                         </p>
 
                         <h1>Tale</h1>
@@ -25,12 +25,14 @@
             <div>
         </div>
         <div id="hud">
-            <div id="left">
-                <div id="ad"></div>
-                <div id="widgetBar"></div>
-            </div>
-            <div id="right">
-                <div id="map"></div>
+            <div id="hudHorizon">
+                <div id="left">
+                    <div id="ad"></div>
+                    <div id="widgetBar"></div>
+                </div>
+                <div id="right">
+                    <div id="map"></div>
+                </div>
             </div>
         </div>
     </body>
