Got server-side push working in both taled and the client.
git-svn-id: https://cixar.com/svns/tale@1204 bef290a0-58e6-0310-905f-ba19b0a2e6dd

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <html xmlns:chiron="http://chironjs.org">
     <head>
-        <script src="/chiron/modules.js?./index.js"></script>
+        <script src="/js/modules.js?./index.js"></script>
         <style>@import url(index.css);</style>
     </head>
     <body>
