--- a/www/play.html
+++ b/www/play.html
@@ -1,6 +1,6 @@
 <html xmlns:chiron="http://chironjs.org">
     <head>
-        <script src="/chiron/modules.js?./play.js"></script>
+        <script src="/js/modules.js?./play.js"></script>
         <style>@import url(index.css);</style>
     </head>
     <body>
