First commit of Node-based JavaScript server.

--- a/www/index.html
+++ b/www/index.html
@@ -18,8 +18,8 @@
 
                         <div id="buffer"></div>
 
-                        <p class="menuBar">
-                            <a id="playButton" class="choice" href="noscript.html">Play</a>
+                        <p class="menu">
+                            <a id="play" class="choice" href="noscript.html">Play</a>
                             <a class="choice" href="http://www.cafepress.com/taleshoppe">Shop</a>
                             <a class="choice" href="http://groups.google.com/group/tale-fan">Talk</a>
                             <a class="choice" href="https://cixar.com/tale/wiki/">Wiki</a>
@@ -44,6 +44,7 @@
         <div class="horizon">
             <div id="music"></div>
         </div>
-        <script src="/js/modules.js?./index.js"></script>
+        <script src="jquery-1.4.2.min.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
