Basic room traversal with room descriptions on the web.

--- a/www/index.html
+++ b/www/index.html
@@ -45,6 +45,7 @@
             <div id="music"></div>
         </div>
         <script src="jquery-1.4.2.min.js"></script>
+        <script src="json2.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
